--- a/aula.html
+++ b/aula.html
@@ -19,9 +19,68 @@
           <!--Foto-->
        <img src="assest/images/BMW.jfif" alt="logo da marca de carros esportivos BMW">
 
+       <!--menu de navegaçao so pode ser utilizado 1 por pagina-->
+       <nav>
+        <!-- Sao dois tipos de lista-->
+        <!-- lista ordenada ou lista nao ordenada-->
+        <ul>
+            <li>Inicio</li>
+            <li>Produtos</li>
+            <li>Contato</li>
+            <li>sobre</li>
+        </ul>
+
+        <ol>
+            <li>Inicio</li>
+            <li>Produtos</li>
+            <li>Contato</li>
+            <li>sobre</li>
+        </ol>
+
+       </nav>
+
     </header>
 
-    <main></main>
+    <main> 
+
+        <ul>
+            <li>
+            Categorias
+            <ul>
+                <li>Esporte</li>
+                <li>Lazer</li>
+                <li> 
+                Casa
+                   <ul>
+                        <li>Sala</li>
+                        <li>Cozinha</li>
+                   </ul>
+                </li>
+            </ul>
+            </li>
+            <li>Marcas</li>
+        </ul>
+
+        
+        <ol>
+            <li>
+            Categorias
+            <ol>
+                <li>Esporte</li>
+                <li>Lazer</li>
+                <li> 
+                Casa
+                   <ol>
+                        <li>Sala</li>
+                        <li>Cozinha</li>
+                   </ol>
+                </li>
+            </ol>
+            </li>
+            <li>Marcas</li>
+        </ol>
+
+    </main>
 
     <footer></footer>
 
